# Generated by Django 6.0 on 2026-01-18 13:06

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Sensor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('site_code', models.CharField(db_index=True, max_length=50, unique=True)),
                ('name', models.CharField(max_length=200)),
                ('latitude', models.FloatField()),
                ('longitude', models.FloatField()),
                ('network', models.CharField(choices=[('LAQN', 'London Air Quality Network'), ('BREATHE', 'Breathe London')], db_index=True, max_length=20)),
                ('site_type', models.CharField(choices=[('roadside', 'Roadside'), ('urban_background', 'Urban Background'), ('suburban', 'Suburban'), ('industrial', 'Industrial'), ('kerbside', 'Kerbside'), ('rural', 'Rural')], default='urban_background', max_length=30)),
                ('borough', models.CharField(blank=True, max_length=100)),
                ('is_active', models.BooleanField(default=True)),
                ('date_opened', models.DateField(blank=True, null=True)),
                ('date_closed', models.DateField(blank=True, null=True)),
                ('metadata', models.JSONField(blank=True, default=dict)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['network', 'name'],
                'indexes': [models.Index(fields=['network', 'is_active'], name='air_quality_network_40343f_idx'), models.Index(fields=['latitude', 'longitude'], name='air_quality_latitud_217b48_idx'), models.Index(fields=['site_type'], name='air_quality_site_ty_c613e4_idx')],
            },
        ),
        migrations.CreateModel(
            name='School',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('urn', models.CharField(db_index=True, help_text='Unique Reference Number', max_length=20, unique=True)),
                ('name', models.CharField(max_length=300)),
                ('latitude', models.FloatField()),
                ('longitude', models.FloatField()),
                ('easting', models.IntegerField(blank=True, null=True)),
                ('northing', models.IntegerField(blank=True, null=True)),
                ('address', models.TextField(blank=True)),
                ('postcode', models.CharField(blank=True, max_length=10)),
                ('borough', models.CharField(blank=True, max_length=100)),
                ('phase', models.CharField(blank=True, choices=[('nursery', 'Nursery'), ('primary', 'Primary'), ('secondary', 'Secondary'), ('all_through', 'All Through')], max_length=20)),
                ('establishment_type', models.CharField(blank=True, max_length=100)),
                ('laei_no2', models.FloatField(blank=True, null=True)),
                ('laei_pm25', models.FloatField(blank=True, null=True)),
                ('laei_pm10', models.FloatField(blank=True, null=True)),
                ('laei_nox', models.FloatField(blank=True, null=True)),
                ('data_source', models.CharField(choices=[('DIRECT', 'Direct Sensor Reading'), ('ADJUSTED', 'LAEI Adjusted by Sensor'), ('LAEI', 'LAEI Baseline Only')], default='LAEI', max_length=20)),
                ('direct_sensor_distance', models.FloatField(blank=True, help_text='Distance to direct sensor in meters', null=True)),
                ('reference_sensor_distance', models.FloatField(blank=True, help_text='Distance to reference sensor in meters', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('direct_sensor', models.ForeignKey(blank=True, help_text='Urban background sensor within 150m for direct readings', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='direct_schools', to='air_quality.sensor')),
                ('reference_sensor', models.ForeignKey(blank=True, help_text='Nearest LAQN sensor for temporal adjustment factors', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reference_schools', to='air_quality.sensor')),
            ],
            options={
                'ordering': ['name'],
                'indexes': [models.Index(fields=['borough'], name='air_quality_borough_9c4490_idx'), models.Index(fields=['data_source'], name='air_quality_data_so_ff4501_idx')],
            },
        ),
        migrations.CreateModel(
            name='Reading',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('timestamp', models.DateTimeField(db_index=True)),
                ('no2', models.FloatField(blank=True, help_text='NO₂ µg/m³', null=True)),
                ('pm25', models.FloatField(blank=True, help_text='PM2.5 µg/m³', null=True)),
                ('pm10', models.FloatField(blank=True, help_text='PM10 µg/m³', null=True)),
                ('o3', models.FloatField(blank=True, help_text='O₃ µg/m³', null=True)),
                ('nox', models.FloatField(blank=True, help_text='NOx µg/m³', null=True)),
                ('is_provisional', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('sensor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='readings', to='air_quality.sensor')),
            ],
            options={
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['sensor', '-timestamp'], name='air_quality_sensor__cf66bf_idx')],
                'unique_together': {('sensor', 'timestamp')},
            },
        ),
        migrations.CreateModel(
            name='SensorAnnualStats',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('year', models.IntegerField()),
                ('no2_mean', models.FloatField(blank=True, null=True)),
                ('pm25_mean', models.FloatField(blank=True, null=True)),
                ('pm10_mean', models.FloatField(blank=True, null=True)),
                ('o3_mean', models.FloatField(blank=True, null=True)),
                ('capture_rate', models.FloatField(blank=True, null=True)),
                ('sensor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='annual_stats', to='air_quality.sensor')),
            ],
            options={
                'ordering': ['-year'],
                'unique_together': {('sensor', 'year')},
            },
        ),
    ]
